# jina-embedding-server

./: .gitignore  Fetch_Models.bat  Fetch_Models.sh  README.md  jina_server.py  optimized_kernels.py  package-lock.json  projector.safetensors  pyproject.toml  requirements.txt  rerank.py  test_server.py
jinaai/jina-embeddings-v5-text-small/: README.md  config.json  config_sentence_transformers.json  configuration_jina_embeddings_v5.py  custom_st.py  modeling_jina_embeddings_v5.py  modules.json
jinaai/jina-embeddings-v5-text-small-retrieval/: .gitattributes  README.md  config.json  config_sentence_transformers.json  tokenizer_config.json
jinaai/jina-embeddings-v5-text-small/adapters/classification/: adapter_config.json  adapter_model.safetensors
jinaai/jina-embeddings-v5-text-small/adapters/clustering/: adapter_config.json  adapter_model.safetensors
jinaai/jina-embeddings-v5-text-small/adapters/retrieval/: adapter_config.json  adapter_model.safetensors
jinaai/jina-embeddings-v5-text-small/adapters/text-matching/: adapter_config.json  adapter_model.safetensors
jinaai/jina-reranker-v3/: tokenizer.json
