[project]
name = "jina-server"
version = "1.0.0"
description = "OpenAI-compatible API for Jina embeddings and reranking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "requests>=2.31.0",
    "py-cpuinfo>=9.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
