[project]
name = "jina-server"
version = "1.5.0"
description = "OpenAI-compatible API for Jina embeddings and reranking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "torch>=2.11.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.2.0",
    "safetensors>=0.4.0",
    "requests>=2.31.0",
    "py-cpuinfo>=9.0.0",
    "python-multipart>=0.0.20",
    "peft>=0.13.2",
]

[project.optional-dependencies]
gpu = [
    "flash-attn>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# PyTorch CUDA source — tells uv to pull GPU-enabled torch from PyTorch's index
# instead of the CPU-only wheel from PyPI.
#
# Switch between CPU/GPU:
#   GPU:  uncomment the [tool.uv.sources] and [[tool.uv.index]] sections below, then `uv sync`
#   CPU:  comment them out, then `uv sync`
# =============================================================================

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
